--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,7 @@ body {
 .container {
     max-width: 800px;
     margin: 0 auto;
-    color: #3c1313;
+    color: green;
     font-family: sans-serif;
     padding-left: 20px;
     padding-right: 20px;
